--- a/backend/package.json
+++ b/backend/package.json
@@ -23,9 +23,15 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.1",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.2.1",
+    "@types/passport-local": "^1.0.35",
+    "ethers": "^6.0.3",
     "mongoose": "^6.9.1",
+    "passport": "^0.6.0",
+    "passport-custom": "^1.1.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
