--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "compile": "hardhat compile",
     "t": "hardhat test",
-    "test": "yarn t"
+    "test": "yarn t",
+    "deploy-content-root": "hardhat run ./scripts/deploy-collection-root.ts --network $npm_config_network"
   },
   "dependencies": {
     "@ethersproject/abi": "^5.7.0",
