--- a/backend/package.json
+++ b/backend/package.json
@@ -27,8 +27,12 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.2.1",
+    "@types/crypto-js": "^4.1.1",
     "@types/passport-local": "^1.0.35",
+    "crypto-js": "^4.1.1",
     "ethers": "^6.0.3",
+    "ipfs": "^0.66.0",
+    "ipfs-core": "^0.18.0",
     "jimp": "^0.22.4",
     "mongoose": "^6.9.1",
     "passport": "^0.6.0",
