--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "gen-typechain": "typechain --out-dir src/abi/types --target=ethers-v5 \"./abi/*.json\"",
     "tunnel": "vk-tunnel --insecure=1 --http-protocol=http --ws-protocol=wss --host=127.0.0.1 --port=3000 app_id=8174360 endpoints=[web]",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -27,15 +28,18 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.2.1",
+    "@typechain/ethers-v5": "^10.1.1",
+    "@typechain/hardhat": "^6.1.4",
     "@types/passport-local": "^1.0.35",
-    "ethers": "^6.0.3",
+    "ethers": "^5.7.2",
     "jimp": "^0.22.4",
     "mongoose": "^6.9.1",
     "passport": "^0.6.0",
     "passport-custom": "^1.1.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typechain": "^8.1.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
