--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "eruda-code": "^2.0.0",
     "eruda-dom": "^2.0.0",
     "ethers": "^5.5.4",
+    "http-proxy-middleware": "^2.0.6",
     "mobx": "^6.8.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^17.0.2",
