--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,10 @@
   },
   "dependencies": {
     "@cteamdev/router": "^0.2.6",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@ethersproject/providers": "^5.7.2",
+    "@mui/material": "^5.11.9",
     "@vkontakte/icons": "^2.16.0",
     "@vkontakte/vk-bridge": "^2.4.8",
     "@vkontakte/vk-tunnel": "^0.1.3",
@@ -49,6 +52,7 @@
     "mobx-react-lite": "^3.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^14.2.3",
     "react-scripts": "^4",
     "web3modal": "^1.9.12"
   },
